<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView android:layout_height="match_parent"-->
    <!--android:layout_width="match_parent"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:id="@+id/mode_linearLayout"
    android:background="@drawable/xuanzejiemianqi">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv_activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:gravity="center"
            android:text="@string/menu_title"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_size"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_weight="25"
        android:background="@color/white">

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp"
            android:background="@color/blue">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zaijia"/>
            <Button
                android:id="@+id/mode_btn_zaijia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huijia_moshi"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>


        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lijia"/>
            <Button
                android:id="@+id/mode_btn_lijia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lijia_moshi"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zidong"/>
            <Button
                android:id="@+id/mode_btn_zidong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zidong_moshi"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shuimian"/>
            <Button
                android:id="@+id/mode_btn_shuimian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuimian_moshi"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qichuang"/>
            <Button
                android:id="@+id/mode_btn_qichuang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="起床模式"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yingyin"/>
            <Button
                android:id="@+id/mode_btn_yingyin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="影音模式"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/langman"/>
            <Button
                android:id="@+id/mode_btn_langman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="浪漫模式"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yule"/>
            <Button
                android:id="@+id/mode_btn_yule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="娱乐模式"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blue"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/huike"/>
            <Button
                android:id="@+id/mode_btn_huike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="会客模式"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

    </GridLayout>
</LinearLayout>
<!--</ScrollView>-->