<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:id="@+id/mode_linearLayout"
    android:background="@drawable/xuanzejiemianqi">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv_activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.66"
            android:gravity="center"
            android:text="@string/menu_title"
            android:textSize="@dimen/activity_title_size"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_weight="25">

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zaijia"
                android:id="@+id/mode_btn_zaijia"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huijia_moshi" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/zaijia"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_zaijia"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/huijia_moshi"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lijia"
                android:id="@+id/mode_btn_lijia"
                android:background="#00000000"
               android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lijia_moshi" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/lijia"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_lijia"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/lijia_moshi"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zidong"
                android:id="@+id/mode_btn_zidong"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zidong_moshi" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/zidong"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_zidong"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/zidong_moshi"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shuimian"
                android:id="@+id/mode_btn_shuimian"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuimian_moshi" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/shuimian"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_shuimian"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/shuimian_moshi"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qichuang"
                android:id="@+id/mode_btn_qichuang"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="起床模式" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/qichuang"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_qichuang"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="起床模式"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yingyin"
                android:id="@+id/mode_btn_yingyin"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="影音模式" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/yingyin"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_yingyin"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="影音模式"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/langman"
                android:id="@+id/mode_btn_langman"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="浪漫模式" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/langman"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_langman"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="浪漫模式"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yule"
                android:id="@+id/mode_btn_yule"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="娱乐模式" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/yule"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_yule"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="娱乐模式"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_margin="0.5dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/huike"
                android:id="@+id/mode_btn_huike"
                android:background="#00000000"
                android:paddingBottom="15dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="会客模式" />
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/huike"/>-->
            <!--<Button-->
                <!--android:id="@+id/mode_btn_huike"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="会客模式"-->
                <!--android:background="@null"-->
                <!--style="?android:attr/borderlessButtonStyle"/>-->
        </LinearLayout>

    </GridLayout>
</LinearLayout>